# algorithms

./: .gitignore  pyproject.toml
src/: dc_summation.py
src/algorithms/: binary_search.py  dc_max_in_list.py  fibonacci.py  insertion_sort.py  merge_sort.py
tests/: test_binary_search.py  test_dc_summation.py  test_fibonacci.py  test_insertion_sort.py  test_merge_sort.py
